test/error/DynamicArrayLeakArgument.ci
public static class Test
{
	static void Foo(int[] p)
	{
	}

	public static bool Run()
	{
		// FIXME:
		Foo(new int[2]); //ERROR: Dynamically allocated array must be assigned to a  reference
		return true;
	}
}
